[package]
name = "plonky2-hashchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
num = "0.4.0"
plonky2 = { git = "https://github.com/mir-protocol/plonky2", version = "0.1.1" }
rand = "0.8.5"
rand_chacha = "0.3.1"
